# TGBotRestaurantChain

./: .gitignore  invalid.md  manage.py  pyproject.toml
SecurityStaff/: admin.py  apps.py  help.py
SecurityStaff/management/commands/: fill_test_data.py  run_bots.py
SecurityStaff/migrations/: 0001_initial.py
SecurityStaff/models/: ViolationStatus.py  ViolationWaiter.py  __init__.py  contactInfo.py  post.py  violation.py  violationType.py  waiter.py
SecurityStaff/telegramBot/: SecurityBot.py  WaiterBot.py  bot_config.py  db.py  keyboards.py  templates.py  utils.py
SecurityStaff/telegramBot/handlers/: common.py  employee_profiles.py  employee_services.py  help.py  profile_management.py  security_handlers.py  service.py  service_file.py  statistics.py  violation_view.py  waiter_handlers.py
SecurityStaff/telegramBot/handlers/Securty/: __init__.py  main.py
SecurityStaff/telegramBot/handlers/Securty/core/: dispatcher.py  keyboard_generator.py
SecurityStaff/telegramBot/handlers/Securty/Профили сотрудников/: __init__.py  handler.py
SecurityStaff/telegramBot/handlers/Securty/Управление нарушениями/: __init__.py
SecurityStaff/telegramBot/handlers/Securty/Управление нарушениями/Добавить нарушение/: __init__.py
SecurityStaff/telegramBot/handlers/Waiter/: access_control.py  keybroads.py  profile_router.py  rang_router.py  service.py  violation_router.py  waiter_handlers.py
SecurityStaff/telegramBot/middlewares/: access_control.py
src_tgbotrestaurantchain/: asgi.py  settings.py  urls.py  wsgi.py
